# compass

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .tm_properties  CMakeLists.txt  compass-lang.ebnf  example.txt  housengine.ebnf  out.compass  readme.md  room_test.txt  story.txt  story_struct.txt  test-option2.txt  test.txt  version.txt
compass.xcodeproj/: project.pbxproj
example_project/: example.txt  project.json
example_project/libraries/: standard.txt
include/compass/: bytecode.hpp  compiler.hpp  contextsema.hpp  driver.hpp  game.hpp  grammar.hpp  iomanaging.hpp  lexer.hpp  parser.hpp  rdparser.hpp  run.hpp  sema.hpp  semantics.hpp  sentence.hpp  story.hpp  storyparser.hpp  types.hpp  verb.hpp
include/compass/compiler/: assembler.hpp  codegen.hpp  compiler.hpp  function_builder.hpp  infer.hpp  inst_checker.hpp  parser.hpp  sema.hpp  type.hpp  world.hpp
include/compass/core/: file.hpp  functional.hpp  story.hpp  string.hpp  utf8.h  verb.hpp
include/compass/filesystem/: path.hpp
include/compass/language/: diagnostics.hpp  driver.hpp  grammar.hpp  lexer.hpp  rdparser.hpp
include/compass/runtime/: game.hpp  run.hpp  sentence.hpp
include/compass/runtime2/: bin_io.hpp  buffer.hpp  bytecode.def  bytecode.hpp  bytecode.x.hpp  collector.hpp  context.hpp  function.hpp  garbage.hpp  gen_code.py  memory.hpp  object.hpp  primitives.hpp  run.hpp  story_file.hpp  type.hpp  unpack.hpp  value.hpp  vm.hpp
include/compass/type/: context.hpp  function.hpp  kind.hpp  object.hpp  primitives.hpp  value.hpp
include/compass/utils/: either.hpp  functional.hpp  invoke_compat.hpp  maybe.hpp  result.hpp  string.hpp
include/house/: asset.hpp  assetparser.hpp  basiclexer.hpp  grammar.hpp  lexer.hpp  parser.hpp  semantics.hpp  story.hpp  storyparser.hpp  storyscript.hpp  utf8.h
lib/: CMakeLists.txt
lib/compiler/: CMakeLists.txt  assembler.cpp  codegen.cpp  compiler.cpp  infer.cpp  instr_data.inc  mnemonics.gen.inc  parser.cpp  sema.cpp  type.cpp
lib/core/: CMakeLists.txt  file.hpp  loader.cpp  loader.hpp  story.cpp  utf8.c  verb.cpp  writer.cpp
lib/filesystem/: path.cpp
lib/language/: CMakeLists.txt  grammar.cpp  lexer.cpp  rdparser.cpp
lib/runtime/: CMakeLists.txt  game.cpp  run.cpp
lib/runtime2/: CMakeLists.txt  collector.cpp  context.cpp  function.cpp  garbage.cpp  memory.cpp  object.cpp  run.cpp  type.cpp  unpack.cpp  value.cpp
lib/type/: CMakeLists.txt  context.cpp  function.cpp  kind.cpp  object.cpp
specs/: adjectives-properties.txt  assembly.abnf  assembly.txt  bytecode.def  compass-lang.abnf  compass-lang.ebnf  compass-machine.txt  gen_code.py  handle-system.txt  runtime-arch.txt  story-file.txt  story_code.txt
src/: CMakeLists.txt
src/compass/: CMakeLists.txt  compiler.cpp  contextsema.cpp  game.cpp  grammar.cpp  lexer.cpp  parser.cpp  path.cpp  rdparser.cpp  run.cpp  sema.cpp  semantics.cpp  sentence.cpp  story.cpp  storyparser+rd.cpp  storyparser.cpp  utf8.c  verb.cpp
src/compass/compiler/: compiler.cpp  (+2 more)
src/house/: CMakeLists.txt  assetparser.cpp  grammar.cpp  lexer.cpp  parser.cpp  semantics.cpp  story.cpp  storyparser+rd.cpp  storyparser.cpp  storyscript+rd.cpp  storyscript.cpp  utf8.c
src/house_test/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  main.cpp
(+14 files in other folders)
